--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.27.10",
+    "firebase": "^9.14.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-file-include": "^2.3.0",
